5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1662_1392.log
== TEST (2019-04-15 15:08:28) 
-- CODE:
c = float(input("consumo: "))
m = c - 
t1 = 30 + 3*c
t2 = 30 + 3.5*c
if(c <= 10):
	print(t1)
else: 
	print(t2)
	
-- ERROR:
File "XXXX", line 2
    m = c - 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:38) 
-- CODE:
c = float(input("consumo: ")) 
t1 = 30 + 3*c
t2 = 30 + 3.5*c
if(c <= 10):
	print(round(t1, 2))
else: 
	print(round(t2,2))
	
-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:09:44) 
-- CODE:
c = float(input("consumo: ")) 
t1 = 30 + 3*c
t2 = 30 + 3.5*c
if(c <= 10):
	print(round(t1, 2))
else: 
	print(round(t2,2))
	
-- EXECUTION TIME:
0.156418
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
54.0
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142.0
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
